--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <div class="candle"></div>
+        <div class="flame"></div>
     </div>
 </body>
 </html>
