--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <div class="container">
         <div class="candle"></div>
         <div class="flame"></div>
+        <div class="skull-cranium"></div>
+        <div class="skull-jaw"></div>
+        <div class="tooth tooth-1"></div>
+        <div class="tooth tooth-2"></div>
+        <div class="tooth tooth-3"></div>
+        <div class="tooth tooth-4"></div>
+        <div class="tooth tooth-5"></div>
+        <div class="tooth-bottom tooth-bottom-1"></div>
+        <div class="tooth-bottom tooth-bottom-2"></div>
+        <div class="tooth-bottom tooth-bottom-3"></div>
+        <div class="tooth-bottom tooth-bottom-4"></div>
+        <div class="tooth-bottom tooth-bottom-5"></div>
     </div>
 </body>
 </html>
