add teeth, eye sockets, nose

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <div class="tooth-bottom tooth-bottom-3"></div>
         <div class="tooth-bottom tooth-bottom-4"></div>
         <div class="tooth-bottom tooth-bottom-5"></div>
+        <div class="eye-socket eye-left"></div>
+        <div class="eye-socket eye-right"></div>
+        <div class="nose-cavity"></div>
     </div>
 </body>
 </html>
