add theme buttons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="theme-controls">
+        <button class="theme-btn" data-theme="halloween">🎃 Halloween</button>
+        <button class="theme-btn" data-theme="blood-moon">🌙 Blood Moon</button>
+        <button class="theme-btn" data-theme="birthday">🎉 Birthday</button>
+    </div>
+    
     <div class="container">
         <div class="candle"></div>
         <div class="flame"></div>
