--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="moon"></div>
         
         <div class="party-hat"></div>
+        <div class="party-pom"></div>
         <div class="confetti confetti-1"></div>
         <div class="confetti confetti-2"></div>
         <div class="confetti confetti-3"></div>
